Fixed contrast errors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -305,6 +305,7 @@ footer a {
 
 .login-form label {
   margin-top: 10px;
+  font-weight: bold;
 }
 
 .login-form input {
@@ -320,6 +321,8 @@ footer a {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 .flash-message {
@@ -388,6 +391,10 @@ footer a {
   text-align: center;
 }
 
+.management-container a {
+  font-weight: bold;
+}
+
 
 /***********************/
 /* Classification Page */
@@ -403,9 +410,9 @@ footer a {
   display: block;
 }
 
-/* Button Placement */
-.classification-form button {
+.form-container button {
   margin-top: 1em;
+  font-weight: bold;
 }
 
 
@@ -421,6 +428,7 @@ footer a {
 
 .register-form label {
   margin-top: 10px;
+  font-weight: bold;
 }
 
 .register-form input {
@@ -437,6 +445,7 @@ footer a {
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
+  font-weight: bold;
 }
 
 .required {
@@ -447,7 +456,9 @@ footer a {
 .form-instructions {
   font-size: 0.9em;
   margin-bottom: 15px;
+  margin-left: 15px;
   color: #555;
+  font-weight: bold;
 }
 
 input.error {
